Centring pagination in index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,7 +58,7 @@ footer{
     background-color: azure;
 }
 
-/****** Home ********************************/
+/****** Home/Index ********************************/
 .review-container{
     color: white;
 }
