--- a/static/css/style.css
+++ b/static/css/style.css
@@ -297,16 +297,6 @@ footer{
 }
 
 
-.contact-form legend{
-    /* color: black; */
-    font-size: 2rem;
-}
-
-.author-container .fa-facebook-f{
-    margin-left: auto; 
-}
-
-
 /*****Edit Post ***********************/
 .gallery-label{
     font-weight: 600;
@@ -330,7 +320,11 @@ footer{
     border-bottom-left-radius: 3px;
 
     text-align: center;
-    margin-right: 5px;
+    margin-right: 8px;
+}
+
+.fa-file-image{
+    padding-top: 5px;
 }
 
 .icon-file i{
@@ -359,6 +353,7 @@ footer{
     background-color: rgb(233,236,239);
     padding: 0 5px;
     margin-left: 10px;
+    width: 100%;
 }
 
 
