--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -173,15 +173,15 @@
                         </div>
                         <div class="file-item-container">
                             <div class="custom-item prev-img">
-                                <span  class="" style="overflow: hidden;">{{ post.gallery_2 }}</span>
+                                <span class="prev-img" style="overflow: hidden;" for="gallery-1">{{ post.gallery_1 }}</span>
                             </div>
                             <div class="custom-item">
-                                <input type="file" class="file-input" name="gallery_2" id="gallery-2" value="{{ post.gallery_2 }}" accept="image/png, image/jpeg">
+                                <input type="file" clas="file-input" name="gallery_1" id="gallery-1" value="{{ post.gallery_1 }}" accept="image/png, image/jpeg">
                             </div>
                         </div>
                     </div>
                 </div>
-        
+
                 <div class="file-group mb-3 col-12">
                     <div class="custome-input-file">
                         <div class="icon-file">
@@ -189,7 +189,23 @@
                         </div>
                         <div class="file-item-container">
                             <div class="custom-item prev-img">
-                                <span class="" style="overflow: hidden;">{{ post.gallery_3 }}</span>
+                                <span class="prev-img" style="overflow: hidden;" for="gallery-2">{{ post.gallery_2 }}</span>
+                            </div>
+                            <div class="custom-item">
+                                <input type="file" clas="file-input" name="gallery_2" id="gallery-2" value="{{ post.gallery_2 }}" accept="image/png, image/jpeg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="file-group mb-3 col-12">
+                    <div class="custome-input-file">
+                        <div class="icon-file">
+                            <span class=""><i class="fas fa-file-image"></i></span>
+                        </div>
+                        <div class="file-item-container">
+                            <div class="custom-item prev-img">
+                                <span class="prev-img" style="overflow: hidden;" for="gallery-3">{{ post.gallery_3 }}</span>
                             </div>
                             <div class="custom-item">
                                 <input type="file" clas="file-input" name="gallery_3" id="gallery-3" value="{{ post.gallery_3 }}" accept="image/png, image/jpeg">
@@ -197,23 +213,7 @@
                         </div>
                     </div>
                 </div>
-        
-                <div class="file-group mb-3 col-12">
-                    <div class="custome-input-file">
-                        <div class="icon-file">
-                            <span class=""><i class="fas fa-file-image"></i></span></div>
-                        <div class="file-item-container">
-                            <div class="custom-item prev-img">
-                                <span class="" style="overflow: hidden;">{{ post.gallery_4 }}</span>
-                                <input type="file" class="file-input" name="gallery_4" id="gallery-4" value="{{ post.gallery_4 }}" accept="image/png, image/jpeg">
-                            </div>
-                            <div class="custom-item">
-                                
-                            </div>
-                        </div>
-                    </div>
-                </div>
-        
+
                 <div class="file-group mb-3 col-12">
                     <div class="custome-input-file">
                         <div class="icon-file">
@@ -221,7 +221,25 @@
                         </div>
                         <div class="file-item-container">
                             <div class="custom-item prev-img">
-                                <span style="overflow: hidden;">{{ post.gallery_5 }}</span>
+                                <span class="prev-img" style="overflow: hidden;" for="gallery-4">{{ post.gallery_4 }}</span>
+                            </div>
+                            <div class="custom-item">
+                                <input type="file" clas="file-input" name="gallery_4" id="gallery-4" value="{{ post.gallery_4 }}" accept="image/png, image/jpeg">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="file-group mb-3 col-12">
+                    <div class="custome-input-file">
+                        <div class="icon-file">
+                            <span class=""><i class="fas fa-file-image"></i></span>
+                        </div>
+                        <div class="file-item-container">
+                            <div class="custom-item prev-img">
+                                <span class="prev-img" style="overflow: hidden;" for="gallery-4">{{ post.gallery_5 }}</span>
+                            </div>
+                            <div class="custom-item">
                                 <input type="file" clas="file-input" name="gallery_5" id="gallery-5" value="{{ post.gallery_5 }}" accept="image/png, image/jpeg">
                             </div>
                         </div>
